# stock_pred_prod_warehouse

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: check_price_history.py  healthcheck.py  ingest_daily_prices_incremental.py  list_schemas.py  list_tables.py  run_daily_ingestion.sh  seed_symbols.py  show_ingestion_log.py  show_symbols.py  test_db_connection.py
sql/: 001_init_shcemas.sql  002_core_tables.sql  003_ingestion_logging.sql
src/config/: settings.py
src/db/: connection.py  price_history_queries.py
src/ingestion/: load_price_history.py  logging.py  yfinance_client.py
stock_pred_prod_warehouse.egg-info/: PKG-INFO  SOURCES.txt
