[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_pred_prod_warehouse"
version = "0.1.0"
description = "Local-first stock prediction warehouse and dashboard"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
